--- a/SalesWebMvc/Views/Sellers/Index.cshtml
+++ b/SalesWebMvc/Views/Sellers/Index.cshtml
@@ -3,6 +3,10 @@
 @{
     ViewData["Title"] = "Sellers";
 }
+<p></p>
+<p>
+    <a asp-action="Create" class ="btn btn-deafult">Create New</a>
+</p>
 
 <h2>@ViewData["Title"]</h2>
 <table class="table table-striped table-hover">
