--- a/SalesWebMvc/Views/Sellers/Details.cshtml
+++ b/SalesWebMvc/Views/Sellers/Details.cshtml
@@ -49,7 +49,7 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-rout-id="@Model.Id" class="btn btn-default">Edit</a>
+    <a asp-action="Edit/@Model.Id" asp-rout-id="@Model.Id" class="btn btn-default">Edit</a>
     <a asp-action="Index">Back to list</a>
 
 </div>
